--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: yacine
 logo: assets/images/profile_pic.png
 show_downloads: True
-remote-theme: pages-theme/minimal@v0.2.0
-plugins: 
--jekyll-remote-theme
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme 
